--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/tiagolpadua/joaosilva/issues"
   },
-  "homepage": "https://github.com/tiagolpadua/joaosilva#readme"
+  "homepage": "https://github.com/tiagolpadua/joaosilva#readme",
+  "dependencies": {
+    "chalk": "^3.0.0"
+  }
 }
