--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "joaosilva": "./bin/card.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tiagolpadua/joaosilva.git"
@@ -22,6 +25,7 @@
   },
   "homepage": "https://github.com/tiagolpadua/joaosilva#readme",
   "dependencies": {
+    "boxen": "^4.2.0",
     "chalk": "^3.0.0"
   }
 }
